fix the overlap animation, replace draft image

--- a/src/app/category/category.component.scss
+++ b/src/app/category/category.component.scss
@@ -239,8 +239,14 @@ section {
     }
     button {
       transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms;
+      position: relative;
       &:hover {
         transform: scale(1.05);
+        box-shadow: 2px 16px 25px rgb(0 128 171 / 10%);
+      }
+      &:nth-of-type(1):hover {
+        z-index: 0;
+        transform: scale(1.05) translateY(-60px);
         box-shadow: 2px 16px 25px rgb(0 128 171 / 10%);
       }
     }
